--- a/index.html
+++ b/index.html
@@ -207,7 +207,7 @@
   <div class="header">Gayathri B - Portfolio</div>
   
   <div class="container">
-    <img src="Gayathri B.jpg" alt="Profile Picture" class="profile-pic">
+    <img src="C:\Users\LBASC\Downloads\IMG-20250131-WA0015.jpg" alt="Profile Picture" class="profile-pic">
 	<h1>Gayathri B</h1>
     <p>7339087428, 8608698035</p>
     <p>gayathrib1609@gmail.com</p>
